--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -56,13 +56,49 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="xST-LZ-nvI">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="120" id="xST-LZ-nvI" customClass="TweetCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="120"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xST-LZ-nvI" id="3ZN-5R-AnG">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UOJ-Bf-qaV">
+                                            <rect key="frame" x="16" y="11" width="65" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="65" id="drM-ze-dc6"/>
+                                                <constraint firstAttribute="height" constant="65" id="oDp-Vm-yzl"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7w-Zd-nvd">
+                                            <rect key="frame" x="89" y="11" width="48" height="22"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RsM-24-4ym">
+                                            <rect key="frame" x="89" y="37" width="270" height="72"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="RsM-24-4ym" firstAttribute="bottom" secondItem="3ZN-5R-AnG" secondAttribute="bottomMargin" id="Boc-BH-lt3"/>
+                                        <constraint firstItem="RsM-24-4ym" firstAttribute="leading" secondItem="UOJ-Bf-qaV" secondAttribute="trailing" constant="8" id="FuM-aQ-vtd"/>
+                                        <constraint firstItem="RsM-24-4ym" firstAttribute="trailing" secondItem="3ZN-5R-AnG" secondAttribute="trailingMargin" id="GZS-lM-1qs"/>
+                                        <constraint firstItem="UOJ-Bf-qaV" firstAttribute="leading" secondItem="3ZN-5R-AnG" secondAttribute="leadingMargin" id="KwC-hJ-zgf"/>
+                                        <constraint firstItem="UOJ-Bf-qaV" firstAttribute="top" secondItem="3ZN-5R-AnG" secondAttribute="topMargin" id="MQn-P0-61c"/>
+                                        <constraint firstItem="M7w-Zd-nvd" firstAttribute="leading" secondItem="UOJ-Bf-qaV" secondAttribute="trailing" constant="8" id="TR8-H3-37x"/>
+                                        <constraint firstItem="RsM-24-4ym" firstAttribute="top" secondItem="M7w-Zd-nvd" secondAttribute="bottom" constant="4" id="qD9-0M-IKZ"/>
+                                        <constraint firstItem="M7w-Zd-nvd" firstAttribute="top" secondItem="3ZN-5R-AnG" secondAttribute="topMargin" id="zRP-mL-FGd"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameLabel" destination="M7w-Zd-nvd" id="Jyg-xv-pdz"/>
+                                    <outlet property="profileView" destination="UOJ-Bf-qaV" id="jla-jE-Mgd"/>
+                                    <outlet property="tweetContentLabel" destination="RsM-24-4ym" id="dhz-Lh-9QF"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -81,7 +117,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xpt-38-BKq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1762" y="157"/>
+            <point key="canvasLocation" x="1760.8" y="156.97151424287858"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Tdf-IM-2hQ">
