--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -56,11 +56,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="120" id="xST-LZ-nvI" customClass="TweetCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="120"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="150" id="xST-LZ-nvI" customClass="TweetCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xST-LZ-nvI" id="3ZN-5R-AnG">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UOJ-Bf-qaV">
@@ -77,26 +77,54 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RsM-24-4ym">
-                                            <rect key="frame" x="89" y="37" width="270" height="72"/>
+                                            <rect key="frame" x="89" y="37" width="270" height="52"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gL4-es-h3B">
+                                            <rect key="frame" x="319" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="Sm0-K1-eMi"/>
+                                                <constraint firstAttribute="height" constant="30" id="Wbv-Ss-5gC"/>
+                                            </constraints>
+                                            <state key="normal" image="favor-icon"/>
+                                            <connections>
+                                                <action selector="favTweet:" destination="xST-LZ-nvI" eventType="touchUpInside" id="YKI-i3-MEV"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bf9-w3-CFo">
+                                            <rect key="frame" x="279" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="dDE-8E-8nj"/>
+                                                <constraint firstAttribute="height" constant="30" id="wfG-zc-zf1"/>
+                                            </constraints>
+                                            <state key="normal" image="retweet-icon"/>
+                                            <connections>
+                                                <action selector="retweet:" destination="xST-LZ-nvI" eventType="touchUpInside" id="FyN-JS-N24"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="RsM-24-4ym" firstAttribute="bottom" secondItem="3ZN-5R-AnG" secondAttribute="bottomMargin" id="Boc-BH-lt3"/>
+                                        <constraint firstItem="gL4-es-h3B" firstAttribute="leading" secondItem="bf9-w3-CFo" secondAttribute="trailing" constant="10" id="AIL-ab-06u"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="bf9-w3-CFo" secondAttribute="bottom" constant="10" id="Cw1-hV-pnK"/>
                                         <constraint firstItem="RsM-24-4ym" firstAttribute="leading" secondItem="UOJ-Bf-qaV" secondAttribute="trailing" constant="8" id="FuM-aQ-vtd"/>
                                         <constraint firstItem="RsM-24-4ym" firstAttribute="trailing" secondItem="3ZN-5R-AnG" secondAttribute="trailingMargin" id="GZS-lM-1qs"/>
                                         <constraint firstItem="UOJ-Bf-qaV" firstAttribute="leading" secondItem="3ZN-5R-AnG" secondAttribute="leadingMargin" id="KwC-hJ-zgf"/>
                                         <constraint firstItem="UOJ-Bf-qaV" firstAttribute="top" secondItem="3ZN-5R-AnG" secondAttribute="topMargin" id="MQn-P0-61c"/>
                                         <constraint firstItem="M7w-Zd-nvd" firstAttribute="leading" secondItem="UOJ-Bf-qaV" secondAttribute="trailing" constant="8" id="TR8-H3-37x"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="gL4-es-h3B" secondAttribute="trailing" constant="10" id="auH-z0-fLm"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="gL4-es-h3B" secondAttribute="bottom" constant="10" id="gvO-16-Y85"/>
+                                        <constraint firstItem="gL4-es-h3B" firstAttribute="top" secondItem="RsM-24-4ym" secondAttribute="bottom" constant="10" id="jRP-bM-o6v"/>
                                         <constraint firstItem="RsM-24-4ym" firstAttribute="top" secondItem="M7w-Zd-nvd" secondAttribute="bottom" constant="4" id="qD9-0M-IKZ"/>
                                         <constraint firstItem="M7w-Zd-nvd" firstAttribute="top" secondItem="3ZN-5R-AnG" secondAttribute="topMargin" id="zRP-mL-FGd"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="favButton" destination="gL4-es-h3B" id="vuJ-5Q-t5s"/>
                                     <outlet property="nameLabel" destination="M7w-Zd-nvd" id="Jyg-xv-pdz"/>
                                     <outlet property="profileView" destination="UOJ-Bf-qaV" id="jla-jE-Mgd"/>
+                                    <outlet property="retweetButton" destination="bf9-w3-CFo" id="b4s-po-yS2"/>
                                     <outlet property="tweetContentLabel" destination="RsM-24-4ym" id="dhz-Lh-9QF"/>
                                 </connections>
                             </tableViewCell>
@@ -214,4 +242,8 @@
             <point key="canvasLocation" x="2445.5999999999999" y="156.97151424287858"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
+    </resources>
 </document>
